tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_handlers.config.istio.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  labels:
    app: mixer
    istio: mixer-handler
    kustomize.component: istio-crds
    package: handler
  name: handlers.config.istio.io
spec:
  group: config.istio.io
  names:
    categories:
    - istio-io
    - policy-istio-io
    kind: handler
    plural: handlers
    singular: handler
  scope: Namespaced
  versions:
  - name: v1alpha2
    served: true
    storage: true
