tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_issuers.certmanager.k8s.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  labels:
    app: certmanager
    kustomize.component: istio-crds
  name: issuers.group: cert-manager.io
spec:
  group: group: cert-manager.io
  names:
    kind: Issuer
    plural: issuers
  scope: Namespaced
  versions:
  - name: v1alpha1
    served: true
    storage: true
