tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/config.istio.io_v1alpha2_handler_kubernetesenv.yaml
apiVersion: config.istio.io/v1alpha2
kind: handler
metadata:
  labels:
    app: mixer
  name: kubernetesenv
  namespace: istio-system
spec:
  compiledAdapter: kubernetesenv
