tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/config.istio.io_v1alpha2_rule_promhttp.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
  name: promhttp
  namespace: istio-system
spec:
  actions:
  - handler: prometheus
    instances:
    - requestcount
    - requestduration
    - requestsize
    - responsesize
  match: (context.protocol == "http" || context.protocol == "grpc") && (match((request.useragent | "-"), "kube-probe*") == false) && (match((request.useragent | "-"), "Prometheus*") == false)
