tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/config.istio.io_v1alpha2_rule_tcpkubeattrgenrulerule.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
  name: tcpkubeattrgenrulerule
  namespace: istio-system
spec:
  actions:
  - handler: kubernetesenv
    instances:
    - attributes
  match: context.protocol == "tcp"
