tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/policy_v1beta1_poddisruptionbudget_istio-galley.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  labels:
    app: galley
    istio: galley
  name: istio-galley
  namespace: istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: galley
      istio: galley
