tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/policy_v1beta1_poddisruptionbudget_istio-sidecar-injector.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  labels:
    app: sidecarInjectorWebhook
    istio: sidecar-injector
  name: istio-sidecar-injector
  namespace: istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: sidecarInjectorWebhook
      istio: sidecar-injector
