tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/policy_v1beta1_poddisruptionbudget_istio-telemetry.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  labels:
    app: telemetry
    istio: mixer
    istio-mixer-type: telemetry
    version: 1.1.0
  name: istio-telemetry
  namespace: istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: telemetry
      istio: mixer
      istio-mixer-type: telemetry
