tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrolebinding_istio-security-post-install-role-binding-istio-system.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  labels:
    app: security
  name: istio-security-post-install-role-binding-istio-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: istio-security-post-install-istio-system
subjects:
- kind: ServiceAccount
  name: istio-security-post-install-account
  namespace: istio-system
