tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/rbac.istio.io_v1alpha1_servicerole_istio-ingressgateway.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  rules:
  - services:
    - istio-ingressgateway.istio-system.svc.cluster.local
