tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/rbac.istio.io_v1alpha1_servicerolebinding_istio-ingressgateway.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRoleBinding
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  roleRef:
    kind: ServiceRole
    name: istio-ingressgateway
  subjects:
  - user: '*'
