tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/~g_v1_service_istio-galley.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: galley
    istio: galley
  name: istio-galley
  namespace: istio-system
spec:
  ports:
  - name: https-validation
    port: 443
  - name: http-monitoring
    port: 15014
  - name: grpc-mcp
    port: 9901
  selector:
    istio: galley
