tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/~g_v1_service_istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http2":"iap-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": false}'
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
  name: istio-ingressgateway
  namespace: istio-system
spec:
  ports:
  - name: status-port
    port: 15020
    targetPort: 15020
  - name: http2
    nodePort: 31380
    port: 80
    targetPort: 80
  - name: https
    nodePort: 31390
    port: 443
  - name: tcp
    nodePort: 31400
    port: 31400
  - name: https-kiali
    port: 15029
    targetPort: 15029
  - name: https-prometheus
    port: 15030
    targetPort: 15030
  - name: https-grafana
    port: 15031
    targetPort: 15031
  - name: https-tracing
    port: 15032
    targetPort: 15032
  - name: tls
    port: 15443
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: NodePort
