tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/~g_v1_serviceaccount_istio-galley-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: galley
  name: istio-galley-service-account
  namespace: istio-system
