tests/stacks/kubernetes/application/istio-1-3-1-stack/test_data/expected/~g_v1_serviceaccount_istio-security-post-install-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: security
  name: istio-security-post-install-account
  namespace: istio-system
